# ad_platform_env

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  http_server.py  inference.py  inference_final.py  models.py  openenv.yaml  pyproject.toml  test_connection.py  test_connection_v1.py
.market_cache/: ecommerce_wikipedia.yaml
data_build/: __init__.py  market_constants.py  market_data_provider.py  vertical_benchmarks.yaml
server/: __init__.py  app.py  default_profile.yaml  environment.py  profile_loader.py  requirements.txt
server/grader/: __init__.py  episode_grader.py  reward_base.py  reward_task1_budget.py  reward_task2_auction.py  reward_task3_dyn.py
server/tasks/: __init__.py  task1_budget.py  task2_auction.py  task3_dynamic_campaign.py
tests/: test_connection.py
